@startuml

title __CS162_FINAL's Class Diagram__\n

  namespace  {
    abstract class Automata {
    }
  }
  

  namespace  {
    class Human {
    }
  }
  

  namespace  {
    class HumanMob {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    abstract class Mob {
    }
  }
  

  namespace  {
    class OpenSimplexNoise {
    }
  }
  

  namespace  {
    class Particle {
    }
  }
  

  namespace  {
    class ParticleSystem {
    }
  }
  

  namespace  {
    interface Simulator {
    }
  }
  

  namespace  {
    class Sketch {
    }
  }
  

  namespace  {
    class UI {
    }
  }
  

  namespace  {
    class Zombie {
    }
  }
  

  namespace  {
    class ZombieMob {
    }
  }
  

  Human -up-|> Automata
  HumanMob -up-|> Mob
  Sketch -up-|> processing.core.PApplet
  Sketch o-- HumanMob : humanMob
  Sketch o-- OpenSimplexNoise : noise
  Sketch o-- UI : sim
  Sketch o-- ZombieMob : zombieMob
  UI .up.|> Simulator
  Zombie -up-|> Automata
  ZombieMob -up-|> Mob


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
